--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:fr": "npm start -- --configuration=fr --port 4201",
+    "start:es": "npm start -- --configuration=es",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -30,6 +32,7 @@
     "@angular-devkit/build-angular": "~0.1102.6",
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
+    "@angular/localize": "^11.2.7",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
